<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.awesome-java-web</groupId>
    <artifactId>spring-boot-commons</artifactId>
    <version>1.0.5-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>spring-boot-commons</name>
    <url>https://github.com/awesome-java-web/spring-boot-commons</url>
    <description>Spring Boot Commons 是一套基于 Spring Boot 框架的可重用 Java 代码和模块，旨在简化和增强 Spring Boot 应用的开发过程</description>

    <organization>
        <name>Awesome Java Web</name>
        <url>https://github.com/awesome-java-web</url>
    </organization>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/license/mit</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>codeboyzhou</name>
            <email>imzhouchen@gmail.com</email>
            <organization>Awesome Java Web</organization>
            <organizationUrl>https://github.com/awesome-java-web</organizationUrl>
        </developer>
    </developers>

    <scm>
        <url>https://github.com/awesome-java-web/spring-boot-commons</url>
        <connection>scm:git:git://github.com/awesome-java-web/spring-boot-commons.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/awesome-java-web/spring-boot-commons.git</developerConnection>
    </scm>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/awesome-java-web/spring-boot-commons/issues</url>
    </issueManagement>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
    </distributionManagement>

    <modules>
        <module>spring-boot-commons-scripting</module>
    </modules>

    <properties>
        <java.version>1.8</java.version>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.organization>awesome-java-web</sonar.organization>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <!--============================= dependency version numbers ===========================-->
        <commons-codec.version>1.17.1</commons-codec.version>
        <groovy.version>4.0.6</groovy.version>
        <groovy-sandbox.version>1.19</groovy-sandbox.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>io.github.awesome-java-web</groupId>
                <artifactId>sort-dependency-maven-plugin</artifactId>
                <version>1.0.0-SNAPSHOT</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>sort-dependencies</goal>
                        </goals>
                        <phase>clean</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>${commons-codec.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.groovy</groupId>
                <artifactId>groovy</artifactId>
                <version>${groovy.version}</version>
            </dependency>
            <dependency>
                <groupId>org.kohsuke</groupId>
                <artifactId>groovy-sandbox</artifactId>
                <version>${groovy-sandbox.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
